--- a/wiki/ReleasePreparation.wiki
+++ b/wiki/ReleasePreparation.wiki
@@ -4,10 +4,10 @@
 
 = Introduction = 
 
-This page describes the process for preparing RuleBender releases.  The 1.x and 2.x versions are prepared in entirely different ways.  1.x uses an ant script to generate executables for each platform and copies all of the jars, simulators (with source), executables,  and icons to the appropriate release directories.  2.x uses the Eclipse Plugin Development Environment (PDE) build system.  Each of the processes are described below. 
+This page describes the process for preparing !RuleBender releases.  The 1.x and 2.x versions are prepared in entirely different ways.  1.x uses an ant script to generate executables for each platform and copies all of the jars, simulators (with source), executables,  and icons to the appropriate release directories.  2.x uses the Eclipse Plugin Development Environment (PDE) build system.  Each of the processes are described below. 
 
 = !BioNetGen and NFSim = 
-The simulators are maintained by their respective groups and RuleBender developers should obtain them in an executable form for inclusion in the RuleBender distributable.  BioNetGen is maintained by Jim Faeder and his lab, while NFSim is written by the Emonet lab.  BioNetGen can be downloaded in its latest release version from bionetgen.org, and more recent versions can be obtained from the team directly.  NFSim is downloaded from http://emonet.biology.yale.edu/nfsim/.
+The simulators are maintained by their respective groups and !RuleBender developers should obtain them in an executable form for inclusion in the !RuleBender distributable.  !BioNetGen is maintained by Jim Faeder and his lab, while NFSim is written by the Emonet lab.  !BioNetGen can be downloaded in its latest release version from bionetgen.org, and more recent versions can be obtained from the team directly.  NFSim is downloaded from http://emonet.biology.yale.edu/nfsim/.
 
 The current simulator component of the distribution looks like:
 
@@ -31,7 +31,7 @@ The current simulator component of the distribution looks like:
 
 BioNetGen-2.2.0 contains all of the BioNetGen related code and executables.  The BNG distribution from bionetgen.org also includes a Models2 directory that is renamed to SampleModels and moved outside of the BioNetGen-2.2.0 directory.  The BioNetGen-2.2.0/bin directory includes all of the executables (including NFSim).  The NFSim-1.10-src directory holds all of the NFSim source.
 
-This directory structure should be inside of the 'distributionResources/Simulation' directory in both of the projects.  After this directory structure is manually created, the scripts and build processes will be able to automatically move all of the appropriate files into place for the release.
+This directory structure should be inside of the 'distributionResources/Simulation' directory in both of the projects.  Right now there is some manual build construction after the build process has finished, but eventually the scripts and build processes will be able to automatically move all of the appropriate files into place for the release.
 
 = 2.x =
 
@@ -93,6 +93,10 @@ The Branding tab is for defining more icons, the about page, and a possible welc
 
 The licensing tab allows the specification of the license. 
 
+== Running and Exporting ==
 
+After the product file is defined, return to the Overview tab and click "Launch an Eclipse application" to test your product.  This should bring up !RuleBender.  If it does not, then generally something is not right in the product file.  After this test works, use the Eclipse Product Export Wizard on the right to export.  Be sure to select 'Export for Multiple Platforms' before clicking 'Next' so that you can select all of the platforms that should be supported.  This will put all of the !RuleBender files wherever you specify, but you will have to manually put the simulators in place before zipping up for the release.  Also, be sure to manually delete all of the exported !RuleBender files before each export, otherwise the release exports stack and bloat the directory.  
 
 = 1.x =
+
+Coming soon... The short version is run 'ant package-all'.  See build.xml for full details until this tutorial is finished.
