--- a/wiki/AdamMatthewSmith.wiki
+++ b/wiki/AdamMatthewSmith.wiki
@@ -2,7 +2,7 @@
 
 =Who?=
 
-I've been working on RuleBender since nearly the beginning.  
+I've been working on !RuleBender since nearly the beginning.  
 
 =!TODO=
 photos, contacts, 'n'at
